--- a/index.html
+++ b/index.html
@@ -1,34 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/mini_dark.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+
     <title>Spotify</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- navbar -->
     <navbar id="navbar">
-        <div class="navbar-container">  
-            <img src="./img/logo.png" alt="" class="logo">
-            <ul class="navbar-items">
-                <li class="item">Premium</li>
-                <li class="item">Ajuda</li>
-                <li class="item">Baixar</li>
-                <li class="item">Inscrever-se</li>
-                <li class="item">Entrar</li>
-            </ul>
-        </div>
+      <div class="navbar-container">
+        <img src="./img/logo.png" alt="" class="logo" />
+        <ul class="navbar-items">
+          <li class="item">Premium</li>
+          <li class="item">Ajuda</li>
+          <li class="item">Baixar</li>
+          <li class="item">Inscrever-se</li>
+          <li class="item">Entrar</li>
+        </ul>
+      </div>
     </navbar>
 
     <!-- showcase  -->
     <div id="showcase">
-        <div class="showcase-container">
-            <h1>Música para todos.</h1>
-            <p>Milhões de músicas à sua escolha. E nem precisa de cartão de crédito.</p>
-            <button class="btn-primary">Obtenha o Spotify Free</button>
-        </div>
+      <div class="showcase-container">
+        <h1>Música para todos.</h1>
+        <p>
+          Milhões de músicas e podcasts para explorar. E nem precisa de cartão
+          de crédito.
+        </p>
+        <button class="btn-primary">Obtenha o Spotify Free</button>
+      </div>
     </div>
-</body>
+
+    <!-- footer -->
+
+    <footer id="footer">
+      <div class="footer-content">
+        <img src="./img/logo.png" alt="" class="logo" />
+        <ul class="footer-menu">
+          <p>Empresa</p>
+          <li class="footer-menu-item">Sobre</li>
+          <li class="footer-menu-item">Empregos</li>
+          <li class="footer-menu-item">For the record</li>
+        </ul>
+        <ul class="footer-menu">
+          <p>Comunidades</p>
+          <li class="footer-menu-item">Para artistas</li>
+          <li class="footer-menu-item">Desenvolvedores</li>
+          <li class="footer-menu-item">Marcas</li>
+          <li class="footer-menu-item">Investidores</li>
+          <li class="footer-menu-item">Fornecedores</li>
+        </ul>
+
+        <ul class="footer-menu">
+          <p>Links úteis</p>
+          <li class="footer-menu-item">Ajuda</li>
+          <li class="footer-menu-item">Player da web</li>
+          <li class="footer-menu-item">Aplicativo móvel grátis</li>
+          <li class="footer-menu-item">Retrospectiva 2020</li>
+        </ul>
+
+        <div class="socials">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-facebook-f"></i>
+        </div>
+      </div>
+      <div class="footer-about">
+        <ul class="about-items">
+          <li class="item">Legal</li>
+          <li class="item">Centro de privacidade</li>
+          <li class="item">Política de privacidade</li>
+          <li class="item">Cookies</li>
+          <li class="item">Sobre anúncios</li>
+        </ul>
+
+        <div class="rights">
+          <div class="country">
+            <p>Brasil</p>
+            <img class="flag" src="./img/brazil.png" alt="" />
+          </div>
+
+          <p>&copy; 2020 Spotify AB</p>
+        </div>
+      </div>
+    </footer>
+
+    <script
+      src="https://kit.fontawesome.com/d7348495d7.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
